--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Structured Concurrency</title>
+  <title>Scrappy Concurrency</title>
   <link rel="stylesheet" href="css/app.css">
 </head>
 
